code/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    TRUE
    STRING
    POOP
    SEMICOLON
    COLON
    BALL
    CANDY
    FALSE

Grammar

Rule 0     S' -> class
Rule 1     class -> vars_global init_vars func_list
Rule 2     class -> func class
Rule 3     vars_global -> varsGlobal vars_global
Rule 4     vars_global -> empty
Rule 5     init_vars -> asign init_vars
Rule 6     init_vars -> empty
Rule 7     func_list -> func func_list
Rule 8     func_list -> empty
Rule 9     func -> FUNC idCheck LPAR funcx RPAR block func_end
Rule 10    func_end -> <empty>
Rule 11    idCheck -> ID
Rule 12    funcx -> vars paramCheck
Rule 13    funcx -> vars paramCheck COMA funcx
Rule 14    funcx -> empty
Rule 15    paramCheck -> <empty>
Rule 16    block -> LCBRACKET blockx RCBRACKET
Rule 17    blockx -> vars
Rule 18    blockx -> vars blockx
Rule 19    blockx -> statement
Rule 20    blockx -> statement blockx
Rule 21    statement -> asign
Rule 22    statement -> condition
Rule 23    statement -> cycle
Rule 24    statement -> print
Rule 25    statement -> list
Rule 26    statement -> call
Rule 27    statement -> move
Rule 28    statement -> eat
Rule 29    statement -> clean
Rule 30    statement -> play
Rule 31    statement -> add
Rule 32    statement -> remove
Rule 33    statement -> turnleft
Rule 34    statement -> turnright
Rule 35    statement -> return
Rule 36    return -> RETURN LPAR par_call expression RPAR par_call2
Rule 37    varsGlobal -> type ID
Rule 38    vars -> type ID
Rule 39    type -> INT
Rule 40    type -> FLOAT
Rule 41    type -> BOOLEAN
Rule 42    asign -> ID id_val EQUAL equal_val expression
Rule 43    asign -> ID id_val EQUAL equal_val call
Rule 44    id_val -> <empty>
Rule 45    equal_val -> <empty>
Rule 46    expression -> exp
Rule 47    expression -> exp COMPARISON op_val expression
Rule 48    exp -> termino
Rule 49    exp -> termino PLUS op_val exp
Rule 50    exp -> termino MINUS op_val exp
Rule 51    termino -> factor
Rule 52    termino -> factor MULTIPLY op_val termino
Rule 53    termino -> factor DIVIDE op_val termino
Rule 54    termino_val -> <empty>
Rule 55    op_val -> <empty>
Rule 56    factor -> LPAR expression RPAR
Rule 57    factor -> MINUS varcte
Rule 58    factor -> varcte termino_val
Rule 59    varcte -> ID
Rule 60    varcte -> NUMINT
Rule 61    varcte -> NUMFLOAT
Rule 62    varcte -> BOOLEANTYPE
Rule 63    print -> PRINT LPAR par_call printx RPAR par_call2
Rule 64    printx -> expression
Rule 65    printx -> ID id_val
Rule 66    printx -> call
Rule 67    printx -> expression PLUS op_val printx
Rule 68    printx -> ID id_val PLUS op_val printx
Rule 69    printx -> call PLUS op_val printx
Rule 70    expCheck -> expression
Rule 71    expCheck -> empty
Rule 72    cycle -> WHILE cycle_1 LPAR expression RPAR cycle_2 block cycle_3
Rule 73    cycle_1 -> <empty>
Rule 74    cycle_2 -> <empty>
Rule 75    cycle_3 -> <empty>
Rule 76    condition -> IF LPAR expression RPAR cond_1 block else cond_2
Rule 77    else -> ELSE cond_else block
Rule 78    else -> empty
Rule 79    cond_1 -> <empty>
Rule 80    cond_2 -> <empty>
Rule 81    cond_else -> <empty>
Rule 82    list -> LIST idCheck_List EQUAL LBRACKET listx RBRACKET
Rule 83    listx -> ID id_param
Rule 84    listx -> ID id_param COMA listx
Rule 85    listx -> NUMINT id_param
Rule 86    listx -> NUMINT id_param COMA listx
Rule 87    listx -> NUMFLOAT id_param
Rule 88    listx -> NUMFLOAT id_param COMA listx
Rule 89    idCheck_List -> ID
Rule 90    id_param -> <empty>
Rule 91    id_param2 -> <empty>
Rule 92    listx_add -> ID id_param2
Rule 93    listx_add -> NUMINT id_param2
Rule 94    listx_add -> NUMFLOAT id_param2
Rule 95    add -> ID idCheck_Add POINT ADD LPAR listx_add RPAR
Rule 96    idCheck_Add -> <empty>
Rule 97    remove -> ID idCheck_Add POINT REMOVE LPAR RPAR
Rule 98    call -> ID id_call LPAR par_call RPAR par_call2
Rule 99    call -> ID id_call LPAR par_call params RPAR par_call2
Rule 100   id_call -> <empty>
Rule 101   par_call -> <empty>
Rule 102   par_call2 -> <empty>
Rule 103   params -> expression COMA params
Rule 104   params -> ID COMA params
Rule 105   params -> expression
Rule 106   params -> ID
Rule 107   move -> MOVE LPAR ID RPAR
Rule 108   eat -> EAT LPAR ID RPAR
Rule 109   clean -> CLEAN LPAR ID RPAR
Rule 110   play -> PLAY LPAR ID RPAR
Rule 111   turnleft -> TURNLEFT LPAR RPAR
Rule 112   turnright -> TURNRIGHT LPAR RPAR
Rule 113   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 95
BALL                 : 
BOOLEAN              : 41
BOOLEANTYPE          : 62
CANDY                : 
CLEAN                : 109
COLON                : 
COMA                 : 13 84 86 88 103 104
COMPARISON           : 47
DIVIDE               : 53
EAT                  : 108
ELSE                 : 77
EQUAL                : 42 43 82
FALSE                : 
FLOAT                : 40
FUNC                 : 9
ID                   : 11 37 38 42 43 59 65 68 83 84 89 92 95 97 98 99 104 106 107 108 109 110
IF                   : 76
INT                  : 39
LBRACKET             : 82
LCBRACKET            : 16
LIST                 : 82
LPAR                 : 9 36 56 63 72 76 95 97 98 99 107 108 109 110 111 112
MINUS                : 50 57
MOVE                 : 107
MULTIPLY             : 52
NUMFLOAT             : 61 87 88 94
NUMINT               : 60 85 86 93
PLAY                 : 110
PLUS                 : 49 67 68 69
POINT                : 95 97
POOP                 : 
PRINT                : 63
RBRACKET             : 82
RCBRACKET            : 16
REMOVE               : 97
RETURN               : 36
RPAR                 : 9 36 56 63 72 76 95 97 98 99 107 108 109 110 111 112
SEMICOLON            : 
STRING               : 
TRUE                 : 
TURNLEFT             : 111
TURNRIGHT            : 112
WHILE                : 72
error                : 

Nonterminals, with rules where they appear

add                  : 31
asign                : 5 21
block                : 9 72 76 77
blockx               : 16 18 20
call                 : 26 43 66 69
class                : 2 0
clean                : 29
cond_1               : 76
cond_2               : 76
cond_else            : 77
condition            : 22
cycle                : 23
cycle_1              : 72
cycle_2              : 72
cycle_3              : 72
eat                  : 28
else                 : 76
empty                : 4 6 8 14 71 78
equal_val            : 42 43
exp                  : 46 47 49 50
expCheck             : 
expression           : 36 42 47 56 64 67 70 72 76 103 105
factor               : 51 52 53
func                 : 2 7
func_end             : 9
func_list            : 1 7
funcx                : 9 13
idCheck              : 9
idCheck_Add          : 95 97
idCheck_List         : 82
id_call              : 98 99
id_param             : 83 84 85 86 87 88
id_param2            : 92 93 94
id_val               : 42 43 65 68
init_vars            : 1 5
list                 : 25
listx                : 82 84 86 88
listx_add            : 95
move                 : 27
op_val               : 47 49 50 52 53 67 68 69
par_call             : 36 63 98 99
par_call2            : 36 63 98 99
paramCheck           : 12 13
params               : 99 103 104
play                 : 30
print                : 24
printx               : 63 67 68 69
remove               : 32
return               : 35
statement            : 19 20
termino              : 48 49 50 52 53
termino_val          : 58
turnleft             : 33
turnright            : 34
type                 : 37 38
varcte               : 57 58
vars                 : 12 13 17 18
varsGlobal           : 3
vars_global          : 1 3

Parsing method: LALR

state 0

    (0) S' -> . class
    (1) class -> . vars_global init_vars func_list
    (2) class -> . func class
    (3) vars_global -> . varsGlobal vars_global
    (4) vars_global -> . empty
    (9) func -> . FUNC idCheck LPAR funcx RPAR block func_end
    (37) varsGlobal -> . type ID
    (113) empty -> .
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . BOOLEAN

  ! shift/reduce conflict for FUNC resolved as shift
    FUNC            shift and go to state 3
    ID              reduce using rule 113 (empty -> .)
    $end            reduce using rule 113 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 2
    BOOLEAN         shift and go to state 5

  ! FUNC            [ reduce using rule 113 (empty -> .) ]

    varsGlobal                     shift and go to state 1
    func                           shift and go to state 6
    vars_global                    shift and go to state 7
    type                           shift and go to state 8
    class                          shift and go to state 9
    empty                          shift and go to state 10

state 1

    (3) vars_global -> varsGlobal . vars_global
    (3) vars_global -> . varsGlobal vars_global
    (4) vars_global -> . empty
    (37) varsGlobal -> . type ID
    (113) empty -> .
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . BOOLEAN

    ID              reduce using rule 113 (empty -> .)
    FUNC            reduce using rule 113 (empty -> .)
    $end            reduce using rule 113 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 2
    BOOLEAN         shift and go to state 5

    varsGlobal                     shift and go to state 1
    vars_global                    shift and go to state 11
    type                           shift and go to state 8
    empty                          shift and go to state 10

state 2

    (40) type -> FLOAT .

    ID              reduce using rule 40 (type -> FLOAT .)


state 3

    (9) func -> FUNC . idCheck LPAR funcx RPAR block func_end
    (11) idCheck -> . ID

    ID              shift and go to state 13

    idCheck                        shift and go to state 12

state 4

    (39) type -> INT .

    ID              reduce using rule 39 (type -> INT .)


state 5

    (41) type -> BOOLEAN .

    ID              reduce using rule 41 (type -> BOOLEAN .)


state 6

    (2) class -> func . class
    (1) class -> . vars_global init_vars func_list
    (2) class -> . func class
    (3) vars_global -> . varsGlobal vars_global
    (4) vars_global -> . empty
    (9) func -> . FUNC idCheck LPAR funcx RPAR block func_end
    (37) varsGlobal -> . type ID
    (113) empty -> .
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . BOOLEAN

  ! shift/reduce conflict for FUNC resolved as shift
    FUNC            shift and go to state 3
    ID              reduce using rule 113 (empty -> .)
    $end            reduce using rule 113 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 2
    BOOLEAN         shift and go to state 5

  ! FUNC            [ reduce using rule 113 (empty -> .) ]

    varsGlobal                     shift and go to state 1
    func                           shift and go to state 6
    vars_global                    shift and go to state 7
    type                           shift and go to state 8
    class                          shift and go to state 14
    empty                          shift and go to state 10

state 7

    (1) class -> vars_global . init_vars func_list
    (5) init_vars -> . asign init_vars
    (6) init_vars -> . empty
    (42) asign -> . ID id_val EQUAL equal_val expression
    (43) asign -> . ID id_val EQUAL equal_val call
    (113) empty -> .

    ID              shift and go to state 17
    FUNC            reduce using rule 113 (empty -> .)
    $end            reduce using rule 113 (empty -> .)

    init_vars                      shift and go to state 15
    asign                          shift and go to state 16
    empty                          shift and go to state 18

state 8

    (37) varsGlobal -> type . ID

    ID              shift and go to state 19


state 9

    (0) S' -> class .



state 10

    (4) vars_global -> empty .

    ID              reduce using rule 4 (vars_global -> empty .)
    FUNC            reduce using rule 4 (vars_global -> empty .)
    $end            reduce using rule 4 (vars_global -> empty .)


state 11

    (3) vars_global -> varsGlobal vars_global .

    ID              reduce using rule 3 (vars_global -> varsGlobal vars_global .)
    FUNC            reduce using rule 3 (vars_global -> varsGlobal vars_global .)
    $end            reduce using rule 3 (vars_global -> varsGlobal vars_global .)


state 12

    (9) func -> FUNC idCheck . LPAR funcx RPAR block func_end

    LPAR            shift and go to state 20


state 13

    (11) idCheck -> ID .

    LPAR            reduce using rule 11 (idCheck -> ID .)


state 14

    (2) class -> func class .

    $end            reduce using rule 2 (class -> func class .)


state 15

    (1) class -> vars_global init_vars . func_list
    (7) func_list -> . func func_list
    (8) func_list -> . empty
    (9) func -> . FUNC idCheck LPAR funcx RPAR block func_end
    (113) empty -> .

    FUNC            shift and go to state 3
    $end            reduce using rule 113 (empty -> .)

    func                           shift and go to state 21
    func_list                      shift and go to state 22
    empty                          shift and go to state 23

state 16

    (5) init_vars -> asign . init_vars
    (5) init_vars -> . asign init_vars
    (6) init_vars -> . empty
    (42) asign -> . ID id_val EQUAL equal_val expression
    (43) asign -> . ID id_val EQUAL equal_val call
    (113) empty -> .

    ID              shift and go to state 17
    FUNC            reduce using rule 113 (empty -> .)
    $end            reduce using rule 113 (empty -> .)

    init_vars                      shift and go to state 24
    asign                          shift and go to state 16
    empty                          shift and go to state 18

state 17

    (42) asign -> ID . id_val EQUAL equal_val expression
    (43) asign -> ID . id_val EQUAL equal_val call
    (44) id_val -> .

    EQUAL           reduce using rule 44 (id_val -> .)

    id_val                         shift and go to state 25

state 18

    (6) init_vars -> empty .

    FUNC            reduce using rule 6 (init_vars -> empty .)
    $end            reduce using rule 6 (init_vars -> empty .)


state 19

    (37) varsGlobal -> type ID .

    INT             reduce using rule 37 (varsGlobal -> type ID .)
    FLOAT           reduce using rule 37 (varsGlobal -> type ID .)
    BOOLEAN         reduce using rule 37 (varsGlobal -> type ID .)
    ID              reduce using rule 37 (varsGlobal -> type ID .)
    FUNC            reduce using rule 37 (varsGlobal -> type ID .)
    $end            reduce using rule 37 (varsGlobal -> type ID .)


state 20

    (9) func -> FUNC idCheck LPAR . funcx RPAR block func_end
    (12) funcx -> . vars paramCheck
    (13) funcx -> . vars paramCheck COMA funcx
    (14) funcx -> . empty
    (38) vars -> . type ID
    (113) empty -> .
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . BOOLEAN

    RPAR            reduce using rule 113 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 2
    BOOLEAN         shift and go to state 5

    funcx                          shift and go to state 27
    vars                           shift and go to state 26
    empty                          shift and go to state 28
    type                           shift and go to state 29

state 21

    (7) func_list -> func . func_list
    (7) func_list -> . func func_list
    (8) func_list -> . empty
    (9) func -> . FUNC idCheck LPAR funcx RPAR block func_end
    (113) empty -> .

    FUNC            shift and go to state 3
    $end            reduce using rule 113 (empty -> .)

    empty                          shift and go to state 23
    func                           shift and go to state 21
    func_list                      shift and go to state 30

state 22

    (1) class -> vars_global init_vars func_list .

    $end            reduce using rule 1 (class -> vars_global init_vars func_list .)


state 23

    (8) func_list -> empty .

    $end            reduce using rule 8 (func_list -> empty .)


state 24

    (5) init_vars -> asign init_vars .

    FUNC            reduce using rule 5 (init_vars -> asign init_vars .)
    $end            reduce using rule 5 (init_vars -> asign init_vars .)


state 25

    (42) asign -> ID id_val . EQUAL equal_val expression
    (43) asign -> ID id_val . EQUAL equal_val call

    EQUAL           shift and go to state 31


state 26

    (12) funcx -> vars . paramCheck
    (13) funcx -> vars . paramCheck COMA funcx
    (15) paramCheck -> .

    COMA            reduce using rule 15 (paramCheck -> .)
    RPAR            reduce using rule 15 (paramCheck -> .)

    paramCheck                     shift and go to state 32

state 27

    (9) func -> FUNC idCheck LPAR funcx . RPAR block func_end

    RPAR            shift and go to state 33


state 28

    (14) funcx -> empty .

    RPAR            reduce using rule 14 (funcx -> empty .)


state 29

    (38) vars -> type . ID

    ID              shift and go to state 34


state 30

    (7) func_list -> func func_list .

    $end            reduce using rule 7 (func_list -> func func_list .)


state 31

    (42) asign -> ID id_val EQUAL . equal_val expression
    (43) asign -> ID id_val EQUAL . equal_val call
    (45) equal_val -> .

    ID              reduce using rule 45 (equal_val -> .)
    LPAR            reduce using rule 45 (equal_val -> .)
    MINUS           reduce using rule 45 (equal_val -> .)
    NUMINT          reduce using rule 45 (equal_val -> .)
    NUMFLOAT        reduce using rule 45 (equal_val -> .)
    BOOLEANTYPE     reduce using rule 45 (equal_val -> .)

    equal_val                      shift and go to state 35

state 32

    (12) funcx -> vars paramCheck .
    (13) funcx -> vars paramCheck . COMA funcx

    RPAR            reduce using rule 12 (funcx -> vars paramCheck .)
    COMA            shift and go to state 36


state 33

    (9) func -> FUNC idCheck LPAR funcx RPAR . block func_end
    (16) block -> . LCBRACKET blockx RCBRACKET

    LCBRACKET       shift and go to state 37

    block                          shift and go to state 38

state 34

    (38) vars -> type ID .

    COMA            reduce using rule 38 (vars -> type ID .)
    RPAR            reduce using rule 38 (vars -> type ID .)
    INT             reduce using rule 38 (vars -> type ID .)
    FLOAT           reduce using rule 38 (vars -> type ID .)
    BOOLEAN         reduce using rule 38 (vars -> type ID .)
    ID              reduce using rule 38 (vars -> type ID .)
    IF              reduce using rule 38 (vars -> type ID .)
    WHILE           reduce using rule 38 (vars -> type ID .)
    PRINT           reduce using rule 38 (vars -> type ID .)
    LIST            reduce using rule 38 (vars -> type ID .)
    MOVE            reduce using rule 38 (vars -> type ID .)
    EAT             reduce using rule 38 (vars -> type ID .)
    CLEAN           reduce using rule 38 (vars -> type ID .)
    PLAY            reduce using rule 38 (vars -> type ID .)
    TURNLEFT        reduce using rule 38 (vars -> type ID .)
    TURNRIGHT       reduce using rule 38 (vars -> type ID .)
    RETURN          reduce using rule 38 (vars -> type ID .)
    RCBRACKET       reduce using rule 38 (vars -> type ID .)


state 35

    (42) asign -> ID id_val EQUAL equal_val . expression
    (43) asign -> ID id_val EQUAL equal_val . call
    (46) expression -> . exp
    (47) expression -> . exp COMPARISON op_val expression
    (98) call -> . ID id_call LPAR par_call RPAR par_call2
    (99) call -> . ID id_call LPAR par_call params RPAR par_call2
    (48) exp -> . termino
    (49) exp -> . termino PLUS op_val exp
    (50) exp -> . termino MINUS op_val exp
    (51) termino -> . factor
    (52) termino -> . factor MULTIPLY op_val termino
    (53) termino -> . factor DIVIDE op_val termino
    (56) factor -> . LPAR expression RPAR
    (57) factor -> . MINUS varcte
    (58) factor -> . varcte termino_val
    (59) varcte -> . ID
    (60) varcte -> . NUMINT
    (61) varcte -> . NUMFLOAT
    (62) varcte -> . BOOLEANTYPE

    ID              shift and go to state 46
    LPAR            shift and go to state 39
    MINUS           shift and go to state 42
    NUMINT          shift and go to state 47
    NUMFLOAT        shift and go to state 41
    BOOLEANTYPE     shift and go to state 49

    factor                         shift and go to state 45
    varcte                         shift and go to state 43
    call                           shift and go to state 44
    termino                        shift and go to state 40
    exp                            shift and go to state 48
    expression                     shift and go to state 50

state 36

    (13) funcx -> vars paramCheck COMA . funcx
    (12) funcx -> . vars paramCheck
    (13) funcx -> . vars paramCheck COMA funcx
    (14) funcx -> . empty
    (38) vars -> . type ID
    (113) empty -> .
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . BOOLEAN

    RPAR            reduce using rule 113 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 2
    BOOLEAN         shift and go to state 5

    funcx                          shift and go to state 51
    type                           shift and go to state 29
    empty                          shift and go to state 28
    vars                           shift and go to state 26

state 37

    (16) block -> LCBRACKET . blockx RCBRACKET
    (17) blockx -> . vars
    (18) blockx -> . vars blockx
    (19) blockx -> . statement
    (20) blockx -> . statement blockx
    (38) vars -> . type ID
    (21) statement -> . asign
    (22) statement -> . condition
    (23) statement -> . cycle
    (24) statement -> . print
    (25) statement -> . list
    (26) statement -> . call
    (27) statement -> . move
    (28) statement -> . eat
    (29) statement -> . clean
    (30) statement -> . play
    (31) statement -> . add
    (32) statement -> . remove
    (33) statement -> . turnleft
    (34) statement -> . turnright
    (35) statement -> . return
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . BOOLEAN
    (42) asign -> . ID id_val EQUAL equal_val expression
    (43) asign -> . ID id_val EQUAL equal_val call
    (76) condition -> . IF LPAR expression RPAR cond_1 block else cond_2
    (72) cycle -> . WHILE cycle_1 LPAR expression RPAR cycle_2 block cycle_3
    (63) print -> . PRINT LPAR par_call printx RPAR par_call2
    (82) list -> . LIST idCheck_List EQUAL LBRACKET listx RBRACKET
    (98) call -> . ID id_call LPAR par_call RPAR par_call2
    (99) call -> . ID id_call LPAR par_call params RPAR par_call2
    (107) move -> . MOVE LPAR ID RPAR
    (108) eat -> . EAT LPAR ID RPAR
    (109) clean -> . CLEAN LPAR ID RPAR
    (110) play -> . PLAY LPAR ID RPAR
    (95) add -> . ID idCheck_Add POINT ADD LPAR listx_add RPAR
    (97) remove -> . ID idCheck_Add POINT REMOVE LPAR RPAR
    (111) turnleft -> . TURNLEFT LPAR RPAR
    (112) turnright -> . TURNRIGHT LPAR RPAR
    (36) return -> . RETURN LPAR par_call expression RPAR par_call2

    INT             shift and go to state 4
    FLOAT           shift and go to state 2
    BOOLEAN         shift and go to state 5
    ID              shift and go to state 58
    IF              shift and go to state 64
    WHILE           shift and go to state 55
    PRINT           shift and go to state 56
    LIST            shift and go to state 57
    MOVE            shift and go to state 68
    EAT             shift and go to state 65
    CLEAN           shift and go to state 73
    PLAY            shift and go to state 66
    TURNLEFT        shift and go to state 77
    TURNRIGHT       shift and go to state 72
    RETURN          shift and go to state 52

    vars                           shift and go to state 53
    move                           shift and go to state 54
    turnright                      shift and go to state 59
    add                            shift and go to state 60
    call                           shift and go to state 61
    statement                      shift and go to state 62
    print                          shift and go to state 63
    type                           shift and go to state 29
    play                           shift and go to state 67
    return                         shift and go to state 69
    turnleft                       shift and go to state 70
    blockx                         shift and go to state 71
    eat                            shift and go to state 74
    condition                      shift and go to state 75
    cycle                          shift and go to state 76
    list                           shift and go to state 78
    remove                         shift and go to state 79
    asign                          shift and go to state 80
    clean                          shift and go to state 81

state 38

    (9) func -> FUNC idCheck LPAR funcx RPAR block . func_end
    (10) func_end -> .

    FUNC            reduce using rule 10 (func_end -> .)
    INT             reduce using rule 10 (func_end -> .)
    FLOAT           reduce using rule 10 (func_end -> .)
    BOOLEAN         reduce using rule 10 (func_end -> .)
    ID              reduce using rule 10 (func_end -> .)
    $end            reduce using rule 10 (func_end -> .)

    func_end                       shift and go to state 82

state 39

    (56) factor -> LPAR . expression RPAR
    (46) expression -> . exp
    (47) expression -> . exp COMPARISON op_val expression
    (48) exp -> . termino
    (49) exp -> . termino PLUS op_val exp
    (50) exp -> . termino MINUS op_val exp
    (51) termino -> . factor
    (52) termino -> . factor MULTIPLY op_val termino
    (53) termino -> . factor DIVIDE op_val termino
    (56) factor -> . LPAR expression RPAR
    (57) factor -> . MINUS varcte
    (58) factor -> . varcte termino_val
    (59) varcte -> . ID
    (60) varcte -> . NUMINT
    (61) varcte -> . NUMFLOAT
    (62) varcte -> . BOOLEANTYPE

    LPAR            shift and go to state 39
    MINUS           shift and go to state 42
    ID              shift and go to state 83
    NUMINT          shift and go to state 47
    NUMFLOAT        shift and go to state 41
    BOOLEANTYPE     shift and go to state 49

    varcte                         shift and go to state 43
    termino                        shift and go to state 40
    exp                            shift and go to state 48
    factor                         shift and go to state 45
    expression                     shift and go to state 84

state 40

    (48) exp -> termino .
    (49) exp -> termino . PLUS op_val exp
    (50) exp -> termino . MINUS op_val exp

  ! shift/reduce conflict for PLUS resolved as shift
    COMPARISON      reduce using rule 48 (exp -> termino .)
    ID              reduce using rule 48 (exp -> termino .)
    FUNC            reduce using rule 48 (exp -> termino .)
    $end            reduce using rule 48 (exp -> termino .)
    INT             reduce using rule 48 (exp -> termino .)
    FLOAT           reduce using rule 48 (exp -> termino .)
    BOOLEAN         reduce using rule 48 (exp -> termino .)
    IF              reduce using rule 48 (exp -> termino .)
    WHILE           reduce using rule 48 (exp -> termino .)
    PRINT           reduce using rule 48 (exp -> termino .)
    LIST            reduce using rule 48 (exp -> termino .)
    MOVE            reduce using rule 48 (exp -> termino .)
    EAT             reduce using rule 48 (exp -> termino .)
    CLEAN           reduce using rule 48 (exp -> termino .)
    PLAY            reduce using rule 48 (exp -> termino .)
    TURNLEFT        reduce using rule 48 (exp -> termino .)
    TURNRIGHT       reduce using rule 48 (exp -> termino .)
    RETURN          reduce using rule 48 (exp -> termino .)
    RCBRACKET       reduce using rule 48 (exp -> termino .)
    RPAR            reduce using rule 48 (exp -> termino .)
    COMA            reduce using rule 48 (exp -> termino .)
    PLUS            shift and go to state 85
    MINUS           shift and go to state 86

  ! PLUS            [ reduce using rule 48 (exp -> termino .) ]


state 41

    (61) varcte -> NUMFLOAT .

    MULTIPLY        reduce using rule 61 (varcte -> NUMFLOAT .)
    DIVIDE          reduce using rule 61 (varcte -> NUMFLOAT .)
    PLUS            reduce using rule 61 (varcte -> NUMFLOAT .)
    MINUS           reduce using rule 61 (varcte -> NUMFLOAT .)
    COMPARISON      reduce using rule 61 (varcte -> NUMFLOAT .)
    RPAR            reduce using rule 61 (varcte -> NUMFLOAT .)
    ID              reduce using rule 61 (varcte -> NUMFLOAT .)
    FUNC            reduce using rule 61 (varcte -> NUMFLOAT .)
    $end            reduce using rule 61 (varcte -> NUMFLOAT .)
    INT             reduce using rule 61 (varcte -> NUMFLOAT .)
    FLOAT           reduce using rule 61 (varcte -> NUMFLOAT .)
    BOOLEAN         reduce using rule 61 (varcte -> NUMFLOAT .)
    IF              reduce using rule 61 (varcte -> NUMFLOAT .)
    WHILE           reduce using rule 61 (varcte -> NUMFLOAT .)
    PRINT           reduce using rule 61 (varcte -> NUMFLOAT .)
    LIST            reduce using rule 61 (varcte -> NUMFLOAT .)
    MOVE            reduce using rule 61 (varcte -> NUMFLOAT .)
    EAT             reduce using rule 61 (varcte -> NUMFLOAT .)
    CLEAN           reduce using rule 61 (varcte -> NUMFLOAT .)
    PLAY            reduce using rule 61 (varcte -> NUMFLOAT .)
    TURNLEFT        reduce using rule 61 (varcte -> NUMFLOAT .)
    TURNRIGHT       reduce using rule 61 (varcte -> NUMFLOAT .)
    RETURN          reduce using rule 61 (varcte -> NUMFLOAT .)
    RCBRACKET       reduce using rule 61 (varcte -> NUMFLOAT .)
    COMA            reduce using rule 61 (varcte -> NUMFLOAT .)


state 42

    (57) factor -> MINUS . varcte
    (59) varcte -> . ID
    (60) varcte -> . NUMINT
    (61) varcte -> . NUMFLOAT
    (62) varcte -> . BOOLEANTYPE

    ID              shift and go to state 83
    NUMINT          shift and go to state 47
    NUMFLOAT        shift and go to state 41
    BOOLEANTYPE     shift and go to state 49

    varcte                         shift and go to state 87

state 43

    (58) factor -> varcte . termino_val
    (54) termino_val -> .

    MULTIPLY        reduce using rule 54 (termino_val -> .)
    DIVIDE          reduce using rule 54 (termino_val -> .)
    PLUS            reduce using rule 54 (termino_val -> .)
    MINUS           reduce using rule 54 (termino_val -> .)
    COMPARISON      reduce using rule 54 (termino_val -> .)
    ID              reduce using rule 54 (termino_val -> .)
    FUNC            reduce using rule 54 (termino_val -> .)
    $end            reduce using rule 54 (termino_val -> .)
    INT             reduce using rule 54 (termino_val -> .)
    FLOAT           reduce using rule 54 (termino_val -> .)
    BOOLEAN         reduce using rule 54 (termino_val -> .)
    IF              reduce using rule 54 (termino_val -> .)
    WHILE           reduce using rule 54 (termino_val -> .)
    PRINT           reduce using rule 54 (termino_val -> .)
    LIST            reduce using rule 54 (termino_val -> .)
    MOVE            reduce using rule 54 (termino_val -> .)
    EAT             reduce using rule 54 (termino_val -> .)
    CLEAN           reduce using rule 54 (termino_val -> .)
    PLAY            reduce using rule 54 (termino_val -> .)
    TURNLEFT        reduce using rule 54 (termino_val -> .)
    TURNRIGHT       reduce using rule 54 (termino_val -> .)
    RETURN          reduce using rule 54 (termino_val -> .)
    RCBRACKET       reduce using rule 54 (termino_val -> .)
    RPAR            reduce using rule 54 (termino_val -> .)
    COMA            reduce using rule 54 (termino_val -> .)

    termino_val                    shift and go to state 88

state 44

    (43) asign -> ID id_val EQUAL equal_val call .

    INT             reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    FLOAT           reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    BOOLEAN         reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    ID              reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    IF              reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    WHILE           reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    PRINT           reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    LIST            reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    MOVE            reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    EAT             reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    CLEAN           reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    PLAY            reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    TURNLEFT        reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    TURNRIGHT       reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    RETURN          reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    RCBRACKET       reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    FUNC            reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)
    $end            reduce using rule 43 (asign -> ID id_val EQUAL equal_val call .)


state 45

    (51) termino -> factor .
    (52) termino -> factor . MULTIPLY op_val termino
    (53) termino -> factor . DIVIDE op_val termino
